@@ -9,5 +9,4 @@
 # full path name of this file's directory.
 
 if {![package vsatisfies [package provide Tcl] 8.5]} {return}
-if {![package vsatisfies [package provide Tcl] 8.3]} {return}
-package ifneeded tcltest 2.3a1 [list source [file join $dir tcltest.tcl]]
+package ifneeded tcltest 2.3b1 [list source [file join $dir tcltest.tcl]]
